--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
   <div class="hero-unit" style = "padding-top: 15px; padding-bottom:15px;">
     <h1>Welcome to the Manzanar Heritage Network</h1>
-    <p>This website is dedicated to sharing the stories of past Manzanar Internees and their descendants through blah blah blah blah </p>
+	<br/>
+    <p>This website is dedicated to sharing the stories of past Manzanar Internees through an interactive social network. We believe that societies remember through specific traditions and events in their past and through communication within their stakeholder communities. Outside explorers can serve to benefit greatly from direct interaction with stakeholders providing legitimate responses to questions about the past. A social network allows for the organized remembrance and retelling of the past as well as the re-installation of bonds within stakeholder communities such as this one at Manzanar.
+	</p>
   </div>
   <div class="row-fluid">
 	<div class="span12">
